<resources>
    <string name="app_name">ToDo List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="done">Done</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="content_req">Add Details <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Title <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="toDo">To Do List</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>